fixed spacing

--- a/public/stylesheets/create.css
+++ b/public/stylesheets/create.css
@@ -10,8 +10,9 @@
 	width: 38.5%;
 }
 #flagsInput{
-	width: 10.1%;
+	margin-left: 4px;
 	display:inline-block;
+	width: 10.1%;
 }
 
 .glyphicon-question-sign{
