--- a/public/stylesheets/practice.css
+++ b/public/stylesheets/practice.css
@@ -38,13 +38,14 @@ mark{
 
 
 #regexInput{
-	margin-left:8;
+	margin-left: 8px;
 	display:inline-block;
 	width: 38.5%;
 }
 #flagsInput{
-	width: 10.1%;
+	margin-left: 4px;
 	display:inline-block;
+	width: 10.1%;
 }
 
 
